--- a/_news/2025-news1.md
+++ b/_news/2025-news1.md
@@ -1,5 +1,5 @@
 ---
 title: "Our paper, <i>Broken Tokens? Your Language Model can
-Secretly Handle Non-Canonical Tokenizations</i> has just been accepted as a <strong style='color:red;'>Spotlight</strong> at NeurIPS 2025! (Awarded to ~3% of submissions)"
+Secretly Handle Non-Canonical Tokenizations</i> has just been accepted as a <strong style='color:red;'>Spotlight</strong> at NeurIPS 2025, see you in San Diego!"
 date: 2025-9-18 20:45:00 -0400
 ---
